content/_generated-doc/2.7/config/quarkus-logging-json.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-logging-json_configuration]]link:#quarkus-logging-json_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-logging-json_quarkus.log.console.json]]`link:#quarkus-logging-json_quarkus.log.console.json[quarkus.log.console.json]`

[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.
--|boolean 
|`true`


a| [[quarkus-logging-json_quarkus.log.console.json.pretty-print]]`link:#quarkus-logging-json_quarkus.log.console.json.pretty-print[quarkus.log.console.json.pretty-print]`

[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read pretty printed output.
--|boolean 
|`false`


a| [[quarkus-logging-json_quarkus.log.console.json.date-format]]`link:#quarkus-logging-json_quarkus.log.console.json.date-format[quarkus.log.console.json.date-format]`

[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.
--|string 
|`default`


a| [[quarkus-logging-json_quarkus.log.console.json.record-delimiter]]`link:#quarkus-logging-json_quarkus.log.console.json.record-delimiter[quarkus.log.console.json.record-delimiter]`

[.description]
--
The special end-of-record delimiter to be used. By default, newline is used as delimiter.
--|string 
|


a| [[quarkus-logging-json_quarkus.log.console.json.zone-id]]`link:#quarkus-logging-json_quarkus.log.console.json.zone-id[quarkus.log.console.json.zone-id]`

[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.
--|string 
|`default`


a| [[quarkus-logging-json_quarkus.log.console.json.exception-output-type]]`link:#quarkus-logging-json_quarkus.log.console.json.exception-output-type[quarkus.log.console.json.exception-output-type]`

[.description]
--
The exception output type to specify.
--|`detailed`, `formatted`, `detailed-and-formatted` 
|`detailed`


a| [[quarkus-logging-json_quarkus.log.console.json.print-details]]`link:#quarkus-logging-json_quarkus.log.console.json.print-details[quarkus.log.console.json.print-details]`

[.description]
--
Enable printing of more details in the log. 
 Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name and source line number.
--|boolean 
|`false`

|===